--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,3 +1,6 @@
 // ==============================
 // Override Variables
 // ==============================
+pre > code {
+  white-space: pre-wrap;
+}
