Fix google site error 2

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,7 +1,7 @@
 // ==============================
 // Override Variables
 // ==============================
-pre > code {
+code {
   white-space: pre-wrap;
   word-wrap:break-word;
 }
