Fix google site error 3

--- a/assets/css/_override.scss
+++ b/assets/css/_override.scss
@@ -1,7 +1,7 @@
 // ==============================
 // Override Variables
 // ==============================
-code {
+pre > code {
   white-space: pre-wrap;
-  word-wrap:break-word;
+  word-wrap: break-word;
 }
